# eit-robotic-avatar

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
cad/: Battery Holder.f3d  Camera Tilt Mount .f3d  Car Plate for Robot Arm .f3d  Car Roof.f3d  Motor Cover Front.f3d  Motor Lifter .f3d  Pi & Battery Holder .f3d
client/: Cargo.toml  RoboticAvatar.tsx  index.css  index.html  index.mjs  index.ts  index.tsx
client-rust/: Cargo.toml
client/models/: robot-avatar.ts  robotic-avatar.test.ts  robotic-avatar.ts  video.test.ts  video.ts
client/services/: webcams-test-tools.ts  webcams.ts
client/src/: Module.tsx  Video.tsx  app.ts  index.tsx  lib.rs  status.mjs  status.ts  video.ts
client/src/views/: RoboticAvatar.tsx  Viewport.tsx
client/views/: Module.tsx  RoboticAvatar.tsx  Video.tsx  Viewport.tsx
common/: Cargo.toml
common/src/: lib.rs
eit_robotic_avatar/: __init__.py  server.py
minion/: Cargo.toml  gpio.sh
minion/src/: arm.py  arm.rs  config.rs  drive.rs  main.rs  server.rs
prototype/: pyproject.toml  readme.md
prototype/eit_robotic_avatar/: server.py
prototype/www/: local.html  remote.html  remote.mjs  source.mjs
prototype/www/modules/: cameras.mjs
robot/: Motor Joint Adapter .f3d  Pi Holder .f3d  README.md  Robot Arm Holder.f3d
robot/my_package/: setup.py
ros/: install_ros2_foxy.sh
ros/my_package/: package.xml
ros/my_package/my_package/: my_client.py
runbooks/: client-setup.md  readme.md  robot-setup.md
server/: Cargo.toml  build.rs
server/src/: config.rs  legacy.rs  main.rs  minion.rs  server.rs
src/: main.rs
www/: index.css  index.html  index.mjs  index.tsx  local.html  local.js  local.mjs  remote.html  remote.js  remote.mjs  source.html  source.js  source.mjs  source.ts  source.tsx  xr.html  xr.mjs  xr.ts  xr.tsx
www/modules/: cameras.mjs  cameras.ts  rtc.mjs  rtc.ts  server.mjs  server.ts
www/src/: app.mjs  video.mjs
www/view/: RoboticAvatar.tsx  Viewport.tsx
