[package]
name = "eit-robotic-avatar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.0", features = ["full"] }
tower = "0.4.13"
parking_lot = "0.12.1"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
rcgen = "0.9.3"
rust-embed="6.4.0"
mime_guess = "2.0.4"