[package]
name = "eit-robotic-avatar-minion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust_gpiozero = "0.2.1"
rustdds = "0.7.10"