[package]
name = "minion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust_gpiozero = "0.2.1"
anyhow = "1.0"
dotenvy = "0.15"

[dependencies.pyo3]
version = "0.17.1"
features = ["auto-initialize"]