[tool.poetry]
name = "eit_robotic_avatar"
version = "0.1.0"
description = ""
authors = ["Equinor ASA"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
importlib-metadata = "^4.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server = "eit_robotic_avatar:server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
